--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,20 +3,19 @@ spring:
     name: devCommunity
 
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
-    url: ${SPRING_DATASOURCE_URL}
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
       ddl-auto: create-drop
-    show-sql: true
-    open-in-view: false
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
-        format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    show-sql: true
+    open-in-view: false
 
   security:
     oauth2:
@@ -24,15 +23,22 @@ spring:
         registration:
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
-            authorization-grant-type: authorization_code #표준 OAuth2의 Authorization Code 플로우 사용(가장 일반적/보안적).
-            redirect-uri: "http://localhost:8080/login/oauth2/code/{registrationId}" #로그인 완료 후 되돌아올 콜백 주소 패턴. #카카오 콘솔의 Redirect URI도 동일하게 바꿔야 함.
-            scope: profile_nickname, profile_image, account_email  #카카오에서 요청할 사용자 정보 권한.
-            client-name: Kakao #이 등록의 표시 이름(로그인 버튼 등에 쓰일 수 있음).👉 변경 가능: 순수 라벨.
+            client-secret: ${KAKAO_CLIENT_SECRET}
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            scope:
+              - profile_nickname
+              - account_email
+            client-name: Kakao
+
         provider:
           kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize #인가 코드 받는 URL(사용자가 로그인/동의하는 화면). 👉 카카오 고정값(변경 불가)
-            token-uri: https://kauth.kakao.com/oauth/token #인가 코드 → 액세스 토큰 교환하는 서버 주소. 👉 카카오 고정값(변경 불가)
-            user-info-uri: https://kapi.kakao.com/v2/user/me #액세스 토큰으로 사용자 정보 가져오는 API. 👉 카카오 고정값(변경 불가)
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
-app:
-  bootstrap-admin-kakao-id: 4530957092
+
+logging:
+  level:
+    org.springframework.security: DEBUG
